--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <main>
     <section>
       <h2>Who Am I?</h2>
-      <p>Hi, I'm Vansh Kumar, a passionate web developer currently pursuing BCA. I love building websites and want to solve real-world problems with tech. Hello! I am Vansh, A Bachelor of Computer Applications (BCA) student in Aman Bhalla Group of Institutes and Technology (ABGI), driven by a deep passion for technology and digital creativity. My academic journey has been a blend of rigorous learning and hands-on experience, allowing me to develop a robust set of skills that bridge the gap between technology and design.
+      <p>Hi, I'm Vansh Kumar, a passionate web developer currently pursuing BCA. I love building websites and want to solve real-world problems with tech. A Bachelor of Computer Applications (BCA) student in Aman Bhalla Group of Institutes and Technology (ABGI), driven by a deep passion for technology and digital creativity. My academic journey has been a blend of rigorous learning and hands-on experience, allowing me to develop a robust set of skills that bridge the gap between technology and design.
 
         <h3>My Journey</h3>
         
