--- a/contact.html
+++ b/contact.html
@@ -40,16 +40,14 @@
           <textarea name="message" rows="7" cols="32" required></textarea>
         </label><br><br>
 
-        <p>Preferred Contact Method:</p>
+        <p>Choose Contact Method:</p>
         <label><input type="checkbox" name="contact_method" value="email"> Email</label>
         <label><input type="checkbox" name="contact_method" value="phone"> Phone</label>
-        <label><input type="checkbox" name="contact_method" value="text"> Message</label>
-        <label><input type="checkbox" name="contact_method" value="text"> Face-To-Face</label><br><br>
+        <label><input type="checkbox" name="contact_method" value="text"> Text</label><br><br>
 
         <p>Inquiry Type:</p>
         <label><input type="radio" name="inquiry" value="general" required> General</label>
         <label><input type="radio" name="inquiry" value="business"> Business</label>
-        <label><input type="radio" name="inquiry" value="support"> Personal</label>
         <label><input type="radio" name="inquiry" value="support"> Support</label><br><br>
 
         <label>How did you find me?
