--- a/Assignment-1/portfolio.html
+++ b/Assignment-1/portfolio.html
@@ -26,7 +26,7 @@
       <article>Hi, I'm Vansh Kumar, a passionate web developer currently pursuing BCA. I love building websites and want
         to solve real-world problems with tech.</article>
 
-      <a href="about.html">👉 Know more</a>
+      <a href="about.html"> Know more</a>
 
       <h2>Tech Skills</h2>
       <ul>
