--- a/Assignment-1/contact.html
+++ b/Assignment-1/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Me</title>
-  <link rel="icon" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
 </head>
 
 <body>
