--- a/Assignment-1/portfolio.html
+++ b/Assignment-1/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Vansh's portfolio</title>
-  <link rel="icon" href="favicon.png">
+ <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
 </head>
 
 <body>
